# metamod-p.forks

./: CMakeLists.txt  README.md
.github/actions/download_all_cache/: action.yml
.github/actions/podman/invoke/: action.yml
.github/actions/podman/prepare/: action.yml
.github/podman/build_contexts/debian/bookworm/: Dockerfile  debian.sources  sources.list
.github/podman/build_contexts/debian/bullseye/: Dockerfile  debian.sources  sources.list
.github/podman/build_contexts/debian/buster/: Dockerfile  debian.sources  sources.list
.github/python/modules/ci_helpers/: __init__.py  cache.py  log_group.py  packages.py  podman.py  validators.py
.github/workflows/: main.yml
cmake/: _initialize_final_target.cmake
cmake/compile_time_tests/hidden_static/: CMakeLists.txt  main.cxx
cmake/compile_time_tests/ipo_with_static_libstdcxx/: CMakeLists.txt  main.cxx
cmake/compile_time_tests/stdcall_alias/: CMakeLists.txt
cmake/compile_time_tests/windres_sz_definition/: CMakeLists.txt  main.rc
cmake/modules/: _check_hidden_static.cmake  _check_ipo_with_static_libstdcxx.cmake  _check_stdcall_alias.cmake  _check_windres_sz_definition.cmake  _get_compile_time_tests_directories.cmake  _initialize_final_target.cmake  _inspect_platform.cmake  _print_todo_warnings.cmake
doc/: Changelog  plugins.ini
doc/html/: a.html  about.html  coding.html  dllapi_notes.html  engine_notes.html  faq.html  maillist.html  metamod.html  newapi_notes.html  release_notes.html  supportedmods.html  wdmisc.html
doc/package_template/: liblist.gam
doc/package_template/addons/metamod/: config.ini  plugins.ini
doc/txt/: Index.txt  a.txt  coding.txt  dllapi_notes.txt  engine_notes.txt  faq.txt  links.txt  maillist.txt  metamod.txt  release_notes.txt  trace.txt  wdmisc.txt  windows_notes.txt
hlsdk/: hlsdk_readme.txt
hlsdk/common/: const.h
hlsdk/dlls/: extdll.h  util.h
hlsdk/engine/: Sequence.h  archtypes.h  eiface.h
metamod/: CMakeLists.txt  Config.mak  Makefile  api_hook.cpp  api_hook.h  api_info.h  commands_meta.h  comp_dep.h  conf_meta.cpp  conf_meta.h  engine_api.cpp  engine_api.h  engineinfo.h  game_autodetect.cpp  game_autodetect.h  game_support.cpp  games.h  games.inl  h_export.cpp  h_export.h  linkent.h  linkplug.cpp  log_meta.cpp  meta_api.h  meta_eiface.h  metamod.cpp  metamod.h  metamod.vcproj  mlist.cpp  mlist.h  mm_pextensions.h  mplayer.cpp  mplayer.h  mplugin.cpp  mplugin.h  mreg.cpp  mreg.h  mutil.cpp  mutil.h  new_baseclass.h  (+16 more)
stub_plugin/: CMakeLists.txt  h_export.cpp
tests/: CMakeLists.txt
tests/hlsdk-engine-archtypes.h/: CMakeLists.txt  main.cxx
tests/metamod-game_support.cpp-setup_gamedll.fixname_amd64/: CMakeLists.txt  main.cxx
trace_plugin/: CMakeLists.txt  api_info.h  dllapi.cpp  dllapi_post.cpp  engine_api.cpp  engine_api_post.cpp  h_export.cpp  trace_api.cpp  trace_api.h
wdmisc_plugin/: CMakeLists.txt  h_export.cpp  res_meta.rc  vdate.cpp  wdmisc.cpp
